crates/rune-config/tests/snapshots/rune_object__assigning_into_the_environment_is_refused_in_runes_words.snap
---
source: crates/rune-config/tests/rune_object.rs
expression: "refusal(\"rune.env.NEW = '1';\\nexport default {};\\n\")"
---
rune.config.ts failed while it was being evaluated as a rune config

`rune.env.NEW` is read-only.

`rune` describes the machine this config is being evaluated on. Changing it would change what the config resolves with and not what is true.

    at <anonymous> (rune.config.ts:2:1)
