crates/rune-config/tests/snapshots/rune_object__deleting_a_member_is_refused_in_runes_words.snap
---
source: crates/rune-config/tests/rune_object.rs
expression: "refusal(\"delete (rune as any).platform;\\nexport default {};\\n\")"
---
rune.config.ts failed while it was being evaluated as a rune config

`rune.platform` is read-only.

`rune` describes the machine this config is being evaluated on. Changing it would change what the config resolves with and not what is true.

    at <anonymous> (rune.config.ts:2:1)
